id: #5093 fixed top spacing / vertical alignment

--- a/dev/sass/qwiki/_forms.scss
+++ b/dev/sass/qwiki/_forms.scss
@@ -170,6 +170,7 @@ input[type]:disabled {
     font-size: 1.1rem;
     font-weight: 400;
     color: $ma-dark-grey;
+    top: 0;
     content: "\f0c8";
   }
   &:checked,
